[gd_scene load_steps=3 format=3 uid="uid://dwgwsdxtumtbu"]

[ext_resource type="Script" path="res://Scenes/Menu/Scripts/main_menu.gd" id="1_suhlw"]
[ext_resource type="Texture2D" uid="uid://ds5qttitbkcpn" path="res://Assets/DEBUG/2D/DEBUGTitle.png" id="2_bplf2"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("menu_start_box", "menu_play_box", "menu_help_box", "menu_options_box", "menu_gallery_box", "quit_pop_up")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_suhlw")
menu_start_box = NodePath("MenuStartMarginContainer")
menu_play_box = NodePath("MenuPlayMarginContainer")
menu_help_box = NodePath("MenuHelpMarginContainer")
menu_options_box = NodePath("MenuOptionsMarginContainer")
menu_gallery_box = NodePath("MenuGalleryMarginContainer")
quit_pop_up = NodePath("QuitPopupMenu")
metadata/_edit_lock_ = true

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00347222
anchor_top = -0.006
anchor_right = 1.00347
anchor_bottom = 1.00617
offset_top = -0.112
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0, 0.0352941, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Title" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.336
anchor_top = 0.131
anchor_right = 0.664
anchor_bottom = 0.417
offset_left = -0.0720215
offset_top = 0.111992
offset_right = 0.0719604
offset_bottom = -0.216003
grow_horizontal = 2
texture = ExtResource("2_bplf2")
metadata/_edit_lock_ = true

[node name="MenuStartMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.461
anchor_right = 0.539
anchor_bottom = 1.0
offset_left = -0.0720215
offset_top = 136.5
offset_right = 0.0719604
offset_bottom = -136.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuStartMarginContainer"]
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="HSeparator" type="HSeparator" parent="MenuStartMarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(90, 200)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Play" type="Button" parent="MenuStartMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"
metadata/_edit_lock_ = true

[node name="Help" type="Button" parent="MenuStartMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Help"
metadata/_edit_lock_ = true

[node name="Options" type="Button" parent="MenuStartMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
metadata/_edit_lock_ = true

[node name="Gallery" type="Button" parent="MenuStartMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Gallery"
metadata/_edit_lock_ = true

[node name="Quit" type="Button" parent="MenuStartMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
metadata/_edit_lock_ = true

[node name="MenuPlayMarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.461
anchor_right = 0.539
anchor_bottom = 1.0
offset_left = -0.0720215
offset_top = 117.0
offset_right = 0.0719604
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPlayMarginContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="HSeparator" type="HSeparator" parent="MenuPlayMarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(90, 240)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Mode1" type="Button" parent="MenuPlayMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mode 1
"
metadata/_edit_lock_ = true

[node name="Mode2" type="Button" parent="MenuPlayMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mode 2"
metadata/_edit_lock_ = true

[node name="Mode3" type="Button" parent="MenuPlayMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mode 3"
metadata/_edit_lock_ = true

[node name="HSeparator2" type="HSeparator" parent="MenuPlayMarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(90, 30)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Back" type="Button" parent="MenuPlayMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
metadata/_edit_lock_ = true

[node name="MenuHelpMarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MenuOptionsMarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MenuGalleryMarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="QuitPopupMenu" type="PopupMenu" parent="."]
title = "Quit?"
initial_position = 4
borderless = false
always_on_top = true
allow_search = false

[connection signal="pressed" from="MenuStartMarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MenuStartMarginContainer/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="MenuStartMarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuStartMarginContainer/VBoxContainer/Gallery" to="." method="_on_gallery_pressed"]
[connection signal="pressed" from="MenuStartMarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MenuPlayMarginContainer/VBoxContainer/Mode1" to="." method="_on_mode_1_pressed"]
[connection signal="pressed" from="MenuPlayMarginContainer/VBoxContainer/Mode2" to="." method="_on_mode_2_pressed"]
[connection signal="pressed" from="MenuPlayMarginContainer/VBoxContainer/Mode3" to="." method="_on_mode_3_pressed"]
[connection signal="pressed" from="MenuPlayMarginContainer/VBoxContainer/Back" to="." method="_on_play_back_pressed"]
[connection signal="about_to_popup" from="QuitPopupMenu" to="." method="_on_quit_popup_menu_about_to_popup"]
[connection signal="index_pressed" from="QuitPopupMenu" to="." method="_on_quit_popup_menu_index_pressed"]
[connection signal="popup_hide" from="QuitPopupMenu" to="." method="_on_quit_popup_menu_popup_hide"]
